# libc

./: .gitignore  .gitmodules  Makefile.am  README  acinclude.m4  configure.ac  ident.c  p_libc.h  regen-acinclude.sh  stdarg.3  stdarg.3.html  stdarg.3.xml  stdarg.h  stdbool.h  stddef.h  stdint.h
sys/: Makefile.am  types.h
t/: .gitignore  Makefile.am  cdefs-1.c  stdarg-1.c  stdbool-1.c  stddef-1.c  stdint-1.c  types-1.c  utils.c  utils.h
ux/: Makefile.am  README  cdefs.h  fixedtypes.h  machtypes.h  size.h  sizedef.h  timedef.h
ux/beos/: Makefile.am  types.h
ux/darwin/: Makefile.am  types.h
ux/linux/: Makefile.am  types.h
ux/minix/: Makefile.am  types.h
ux/x86/: Makefile.am  types.h
ux/x86-64/: Makefile.am  types.h
